--- a/my-app/public/index.html
+++ b/my-app/public/index.html
@@ -15,6 +15,81 @@
 
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>John Grohman</title>
+
+    <style>
+
+      @import url('https://fonts.googleapis.com/css2?family=Space+Mono&display=swap');
+
+      html, body, #root, .app {
+        margin: 0;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        font-family: 'Space Mono', monospace;
+        color: white;
+      }
+
+      #sidebar {
+        background-color: #262626;
+        width: 25%;
+        min-width: 300px;
+        max-width: 360px;
+        height: 100%;
+        text-align: center;
+        position: fixed;
+      }
+
+      #profile-picture {
+        width: 30%;
+        min-width: 200px;
+        max-width: 300px;
+        border-radius: 100%;
+        margin-top: 50px;
+      }
+
+      div#container {
+        display: flex;
+        margin-right: auto;
+        margin-left: auto;
+        width: 30%;
+      }
+
+      div#container * {
+        width: 30px;
+        margin-left: auto;
+        margin-right: auto;
+      }
+
+      #sidebar h2 {
+        font-weight: lighter;
+      }
+
+      #code {
+        width: 60px;
+        position: absolute;
+        bottom: 20px;
+        left: 41.5%;
+      }
+
+      nav ul{
+        list-style: none;
+        text-align: left;
+        margin-top: 30px;
+      }
+
+      li {
+        margin-bottom: 10px;
+      }
+
+      nav {
+        margin-top: 20px;
+        margin-left: 15%;
+      }
+
+
+
+    </style>
+
   </head>
 
   <body>
