--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,8 @@
       content="Web site created using create-react-app"
     />
 
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    
     <title>John Grohman</title>
   </head>
 
