--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
       content="Web site created using create-react-app"
     />
 
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <!-- <link rel="manifest" href="%PUBLIC_URL%/manifest.json" /> -->
     
     <title>John Grohman</title>
   </head>
